# UPuzzleGame

./: CMakeLists.txt  README.md  build_macos.sh
build_macos/: CMakeCache.txt  cmake_install.cmake
build_macos/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
build_macos/game/: cmake_install.cmake
build_macos/game/src/: cmake_install.cmake
build_macos/minikit/: cmake_install.cmake
build_macos/minikit/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  install_postBuildPhase.makeDebug
build_macos/minikit/MiniKit.xcodeproj/: project.pbxproj
build_macos/minikit/framework/: cmake_install.cmake
build_macos/puzzle.xcodeproj/: project.pbxproj
build_win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  puzzle.sln
build_win32/game/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build_win32/game/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  puzzle.vcxproj  (+2 more)
build_win32/minikit/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MiniKit.sln  cmake_install.cmake
game/src/: CMakeLists.txt  main.cpp
game/src/GameLogic/: Directions.hpp  Game.cpp  Game.hpp  GameHUD.cpp  GameHUD.hpp  Grid.cpp  Grid.hpp  PauseResumeState.cpp  PauseResumeState.hpp  Score.cpp  Score.hpp  Tetromino.cpp  Tetromino.hpp
(+187 files in other folders)
